# tm

./: Desafio3_APVC.ipynb  activate.sh  pyproject.toml  requirements.txt
tm/: # %% [markdown].py  # Doc2Vec Model.py  Projeto.ipynb  Projeto_2.ipynb  TM_Project.ipynb  Untitled-1.ipynb  Untitled-2.py
tm/resources/: amazon_reviews_predicted.csv
