[tool.poetry]
name = "tm"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
pandas = "^2.2.2"
scipy = "1.10.1"
matplotlib = "^3.8.4"
nltk = "^3.8.1"
scikit-learn = "^1.4.2"
textblob = "^0.18.0.post0"
gensim = "^4.3.2"
vadersentiment = "^3.3.2"
tensorflow = "^2.16.1"
torch = "^2.2.2"
torchvision = "^0.17.2"
torchaudio = "^2.2.2"
bertopic = "^0.16.0"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"
ipywidgets = "^8.1.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
